--- a/src/main/webapp/ex05_FAO.html
+++ b/src/main/webapp/ex05_FAO.html
@@ -131,7 +131,7 @@
 								name="first" /></p>
 					</td>
 					<td>&nbsp&nbsp
-						<select name="op">
+						<select name="op" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
 							<option value="+" selected>+</option>
 							<option value="-">-</option>
 							<option value="*">*</option>
